DustStorm has a desription attribute instead of use of Settlement
Changes:
- DustStorm has a description attribute that describes the state
- Weather handles closing duststorms more optimal
- Settlement no longer needs the stormMsg attribute as it is replaced with the DustStorm attribute
- Banner in Settlement map uses the DustStorm description
- ReviewMissionPlan assess the assess the mission agains the Settlement pass score instead using the Settlement
- Remove unused methods from Settlement

Part #773